--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <!--<link rel="stylesheet" type="text/css" href="assets/spectre.min.css" />-->
+    <title>Topix Mobile</title>
   </head>
   <body>
-    <example></example>
+    <splash></splash>
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/riot/2.5/riot.min.js"></script>
