linked splash screen back to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <title>Topix Mobile</title>
   </head>
   <body>
-    <home></home>
+    <splash></splash>
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/riot/2.5/riot.min.js"></script>
