--- a/src/splash.html
+++ b/src/splash.html
@@ -41,54 +41,6 @@
         100%{background-position:0% 50%}
       }
 
-      .center {
-        position: absolute;
-        top: 50vh;
-        left: 50vw;
-        transform: translate(-50%, -50%);
-      }
-
-      span {
-        font-size: 100px;
-        font-family: sans-serif;
-        font-weight: 900;
-      }
-
-      .content {
-        animation-duration: 4s;
-        animation-name: fadeIn;
-      }
-
-      @keyframes fadeIn {
-        0%, 50% {opacity: 0;}
-        100% {opacity: 1;}
-      }
-
-      .topix-animated {
-        width: 72px;
-        -webkit-animation-duration: 2s;
-        animation-duration: 2s;
-        -webkit-animation-fill-mode: both;
-        animation-fill-mode: both;
-      }
-
-      @-webkit-keyframes bounce {
-        0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}
-        40% {-webkit-transform: translateY(-30px);}
-        60% {-webkit-transform: translateY(-15px);}
-      }
-
-      @keyframes bounce {
-        0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-        40% {transform: translateY(-30px);}
-        60% {transform: translateY(-15px);}
-      }
-
-      .bounce {
-        -webkit-animation-name: bounce;
-        animation-name: bounce;
-      }
-
       .topix {
         position: relative;
       }
@@ -97,28 +49,30 @@
         position: absolute;
         top: 20px;
         left: 145px;
+
+        -webkit-animation-delay: 0.4s;
+        -moz-animation-delay: 0.4s;
+        animation-delay: 0.4s;
+
+        -webkit-animation-duration: 2s;
+        -moz-animation-duration: 2s;
+        animation-duration: 2s;
       }
 
       .logo-container {
         position: relative;
+        
+        -webkit-animation-duration: 2s;
+        -moz-animation-duration: 2s;
+        animation-duration: 2s;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <!--
-      <div class="content">
-        slideshow stuff
-      </div>
-      <div class="center">
-        <span>T</span>
-        <img class="topix-animated bounce" src="images/pineapple.png" />
-        <span>PIX</span>
-      </div>
-      -->
       <div class="logo-container animated bounceInUp">
         <img class="topix" src="images/t_pix.png" />
-        <img class="pineapple animated shake" src="images/pineapple.png" />
+        <img class="pineapple animated bounce" src="images/pineapple.png" />
       </div>
     </div>
   </body>
