--- a/src/splash.html
+++ b/src/splash.html
@@ -80,6 +80,13 @@
         -webkit-animation-duration: 1.5s;
         -moz-animation-duration: 1.5s;
         animation-duration: 1.5s;
+
+        width: 100vw;
+        height: 100vh;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     </style>
   </head>
@@ -93,7 +100,7 @@
       </div>
     </div>
     <div class="fade-delay animated fadeIn">
-      <h1>DELAYED SITE FADE IN</h1>
+      <img src="images/hp_mocks_v3_-_strong_gradients_1024.jpg"/>
     </div>
   </body>
 </html>
